--- a/modules/fanotify/configure.ac
+++ b/modules/fanotify/configure.ac
@@ -48,6 +48,14 @@ if test "$HAVE_FANOTIFY_INIT" = "0" ; then
    AC_MSG_ERROR("fanotify is not availble on this Linux distribution")
 fi
 
+# check for desktop notifications
+PKG_CHECK_MODULES(LIBNOTIFY, libnotify, [HAVE_LIBNOTIFY=yes], [HAVE_LIBNOTIFY=no])
+if test "$HAVE_LIBNOTIFY" = "yes"; then
+   AC_DEFINE(HAVE_LIBNOTIFY,1,[Define to 1 if you libnotify library is available])
+else
+   AC_MSG_WARN("cannot find libnotify library, desktop notifications will not be available")
+fi
+
 # Output files
 AC_CONFIG_FILES([
 Makefile
