adding # scan configurations for on-access/on-demand

--- a/libuhuru/configure.ac
+++ b/libuhuru/configure.ac
@@ -32,6 +32,10 @@ AC_CHECK_FUNCS(lseek)
 AC_CHECK_FUNCS(getpid)
 AC_CHECK_FUNCS(strerror)
 
+# check for headers
+AC_CHECK_HEADERS([sys/types.h])
+AC_CHECK_HEADERS([unistd.h])
+
 # check for debug
 AC_MSG_CHECKING(for debug)
 AC_MSG_RESULT($enable_debug)
