--- a/modules/fanotify/conf/fanotify.conf
+++ b/modules/fanotify/conf/fanotify.conf
@@ -11,3 +11,13 @@ watch-dir="/home"
 
 # enable on-access scan
 enable-on-access=1
+
+white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"; "/var";
+
+# scan executables with clamav
+mime-type="application/x-executable"; clamav
+# scan PDF with clamav
+mime-type="application/pdf"; clamav
+
+# 1M, must support units ;-)
+max-size=1048576 
