updated libcore and fanotify

--- a/modules/fanotify/conf/fanotify.conf
+++ b/modules/fanotify/conf/fanotify.conf
@@ -3,15 +3,16 @@
 #
 [fanotify]
 
+# enable on-access scan
+enable-on-access=1
+
 # watched directory
 #watch-dir="/media"
 
 # watched directory
 watch-dir="/home"
 
-# enable on-access scan
-enable-on-access=1
-
+# white list of directories: files in these directories will never be scanned for on-access scan
 white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"; "/var";
 
 # scan executables with clamav
