updated libcore and fanotify

--- a/libuhuru/include/libuhuru/Makefile.am
+++ b/libuhuru/include/libuhuru/Makefile.am
@@ -9,6 +9,7 @@ libcore/filectx.h \
 libcore/handle.h \
 libcore/info.h \
 libcore/module.h \
+libcore/ondemand.h \
 libcore/scanconf.h \
 libcore/scan.h \
 libcore/log.h 
