--- a/modules/fanotify/conf/fanotify.conf
+++ b/modules/fanotify/conf/fanotify.conf
@@ -13,7 +13,7 @@ enable-on-access=1
 watch-dir="/home"
 
 # white list of directories: files in these directories will never be scanned for on-access scan
-white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"; "/var";
+white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"; "/var"
 
 # scan executables with clamav
 mime-type="application/x-executable"; clamav
