--- a/libuhuru/conf/uhuru.conf.in
+++ b/libuhuru/conf/uhuru.conf.in
@@ -5,7 +5,7 @@
 [on-demand]
 
 # white list of directories: files in these directories will never be scanned for on-access scan
-white-list-dir="/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/sbin"; "/usr"; "/var"
+white-list-dir="/boot"; "/dev"; "/etc"; "/proc"; "/run"; "/sys"; "/var"
 
 # scan executables with module5_2 and clamav
 mime-type="application/x-executable"; module5_2; clamav
