--- a/modules/fanotify/conf/fanotify-test.conf
+++ b/modules/fanotify/conf/fanotify-test.conf
@@ -1,7 +1,11 @@
 #
-# Uhuru Linux on-access scan using fanotify : module configuration for test
+# Uhuru Linux on-access scan using fanotify : module configuration
 #
 [fanotify]
+
+# enable on-access scan
+# for the test module, on-access is disabled
+enable-on-access=0
 
 # watched directory
 #watch-dir="/media"
@@ -9,6 +13,14 @@
 # watched directory
 watch-dir="/home"
 
-# enable on-access scan
-# for the test module, on-access is disabled
-enable-on-access=0
+# white list of directories: files in these directories will never be scanned for on-access scan
+white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"; "/var"
+
+# scan executables with clamav
+mime-type="application/x-executable"; clamav
+# scan PDF with clamav
+mime-type="application/pdf"; clamav
+
+# 1M, must support units ;-)
+max-size=1048576 
+
