removing libnotify from on-access scan module

--- a/modules/fanotify/configure.ac
+++ b/modules/fanotify/configure.ac
@@ -43,10 +43,10 @@ if test "$HAVE_GIO2" = "no"; then
 fi
 
 # check for fanotify
-AC_CHECK_FUNCS(fanotify_init, [HAVE_FANOTIFY_INIT=1], [HAVE_FANOTIFY_INIT=0])
-if test "$HAVE_FANOTIFY_INIT" = "0" ; then
-   AC_MSG_ERROR("fanotify is not availble on this Linux distribution")
-fi
+#AC_CHECK_FUNCS(fanotify_init, [HAVE_FANOTIFY_INIT=1], [HAVE_FANOTIFY_INIT=0])
+#if test "$HAVE_FANOTIFY_INIT" = "0" ; then
+#   AC_MSG_ERROR("fanotify is not availble on this Linux distribution")
+#fi
 
 # check for desktop notifications
 PKG_CHECK_MODULES(LIBNOTIFY, libnotify, [HAVE_LIBNOTIFY=yes], [HAVE_LIBNOTIFY=no])
