fixing various bugs during GN tests

--- a/gui/qt/Makefile.am
+++ b/gui/qt/Makefile.am
@@ -51,7 +51,7 @@ nodist_uhuru_qt_SOURCES= \
 	ui/ui_aboutdialog.h \
 	ui/ui_scanwidget.h \
 	ui/ui_updatedialog.h \
-	utils/moc_daemon.cpp \
+pp	utils/moc_daemon.cpp \
 	utils/moc_dbus.cpp \
 	qrc_uhuru.cpp
 
