debugging on-access

--- a/modules/fanotify/conf/fanotify-test.conf
+++ b/modules/fanotify/conf/fanotify-test.conf
@@ -20,6 +20,8 @@ white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/li
 mime-type="application/x-executable"; clamav
 # scan PDF with clamav
 mime-type="application/pdf"; clamav
+# scan ZIP with clamav
+mime-type="application/zip"; clamav
 
 # 1M, must support units ;-)
 max-size=1048576 
