uhuru-av-Windows :: add on_acces_windows module configuration + update uhuru_scan_simple() function

--- a/libuhuru/conf/uhuru.conf
+++ b/libuhuru/conf/uhuru.conf
@@ -2,10 +2,10 @@
 # Linux on-demand scan : module configuration
 #
 
-[on_demand]
+[on-demand]
 
 # white list of directories: files in these directories will never be scanned for on-access scan
-white-list-dir="/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/sbin"; "/usr"; "/var";
+white-list-dir="/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/sbin"; "/usr"; "/var"
 
 # scan executables with module5_2 and clamav
 mime-type="application/x-executable"; module5_2; clamav
@@ -19,6 +19,21 @@ mime-type="application/x-msdownload"; module5_2; clamav
 mime-type="application/pdf"; clamav
 # clamav scans every file if no other module applies
 mime-type="*"; clamav    
+
+[on-access]
+
+# scan executables with module5_2 and clamav
+mime-type="application/x-executable"; module5_2; clamav
+mime-type="application/x-object"; module5_2; clamav
+mime-type="application/x-sharedlib"; module5_2; clamav
+# scan windows executables with module5_2 and clamav
+mime-type="application/x-dosexec"; clamav; module5_2
+mime-type="application/x-msdos-program"; module5_2; clamav
+mime-type="application/x-msdownload"; module5_2; clamav
+# scan PDF with clamav
+mime-type="application/pdf"; clamav
+# clamav scans every file if no other module applies
+mime-type="*"; clamav
 
 # 1M, must support units ;-)
 max-size=1048576 
