--- a/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj
+++ b/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="..\..\..\libuhuru\include\libuhuru\libcore\ondemand.h" />
     <ClInclude Include="..\..\..\libuhuru\include\libuhuru\libcore\scan.h" />
     <ClInclude Include="..\..\..\libuhuru\include\libuhuru\libcore\scanconf.h" />
+    <ClInclude Include="..\..\..\libuhuru\src\libcore\builtin-modules\onaccess_windows.h" />
     <ClInclude Include="..\..\..\libuhuru\src\libcore\builtin-modules\ondemandmod.h" />
     <ClInclude Include="..\..\..\libuhuru\src\libcore\conf.h" />
     <ClInclude Include="..\..\..\libuhuru\src\libcore\confparser.h" />
@@ -103,6 +104,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\libuhuru\src\libcore\action.c" />
+    <ClCompile Include="..\..\..\libuhuru\src\libcore\builtin-modules\onaccess_windows.c" />
     <ClCompile Include="..\..\..\libuhuru\src\libcore\builtin-modules\ondemandmod.c" />
     <ClCompile Include="..\..\..\libuhuru\src\libcore\conf.c" />
     <ClCompile Include="..\..\..\libuhuru\src\libcore\confparser.c" />
