--- a/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
+++ b/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
@@ -114,6 +114,9 @@
     <ClInclude Include="..\..\..\libuhuru\include\libuhuru\libcore\scanconf.h">
       <Filter>Header Files\libcore</Filter>
     </ClInclude>
+    <ClInclude Include="..\..\..\libuhuru\src\libcore\builtin-modules\onaccess_windows.h">
+      <Filter>Source Files\libcore\builtin-modules</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="..\..\..\libuhuru\src\libcore\action.c">
@@ -171,6 +174,9 @@
       <Filter>Source Files\libcore</Filter>
     </ClCompile>
     <ClCompile Include="..\..\..\libuhuru\src\libcore\builtin-modules\ondemandmod.c">
+      <Filter>Source Files\libcore\builtin-modules</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\libuhuru\src\libcore\builtin-modules\onaccess_windows.c">
       <Filter>Source Files\libcore\builtin-modules</Filter>
     </ClCompile>
   </ItemGroup>
