new implementation of on-access on linux

--- a/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
+++ b/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
@@ -1,7 +1,7 @@
 #
 # Uhuru Linux on-access scan using fanotify : module configuration
 #
-[fanotify]
+[on-access-linux]
 
 # enable on-access scan
 enable-on-access=1
