--- a/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux-test.conf
+++ b/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux-test.conf
@@ -1,7 +1,7 @@
 #
 # Uhuru Linux on-access scan using fanotify : module configuration
 #
-[fanotify]
+[on-access-linux]
 
 # enable on-access scan
 # for the test module, on-access is disabled
