linux on-access running with 2 partitions

--- a/libuhuru/src/linux/modules/on-access-linux/src/Makefile.am
+++ b/libuhuru/src/linux/modules/on-access-linux/src/Makefile.am
@@ -11,7 +11,7 @@ mount.c \
 mount.h 
 
 on_access_linux_la_LDFLAGS= -module -avoid-version
-on_access_linux_la_LIBADD= -luhuru_core @GLIB2_LIBS@
+on_access_linux_la_LIBADD= @GLIB2_LIBS@
 on_access_linux_la_CFLAGS= -I$(top_srcdir)/include -I$(top_srcdir)/src -I$(top_srcdir)/src/linux @GLIB2_CFLAGS@
 
 install-exec-hook:
