--- a/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
+++ b/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
@@ -4,13 +4,24 @@
 [on-access-linux]
 
 # enable on-access scan
-enable-on-access=1
+enable=1
 
-# watched directory
-#watch-dir="/media"
+# enable permission check
+# if 1, will block access to file if opened file contains a virus
+# if 0, will only notify if opened file contains a virus
+enable-permission=1
 
-# watched directory
-watch-dir="/home"
+# enable removable media monitoring
+# if 1, removable media mount points will be added on the fly to the monitoring list
+enable-removable-media=1
+
+# monitored mount points
+# file access inside these mount point will be monitored
+mount="/home"
+
+# monitored directories
+directory="/var/tmp"
+directory="/tmp"
 
 # white list of directories: files in these directories will never be scanned for on-access scan
 white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"; "/var"
