uhuru-av-Windows :: IHM communication with the scan service + multithreaded pipe review + fix lib-json bug causing service crash + write service Load/Unload procedure routine + service test in command line

--- a/.gitignore
+++ b/.gitignore
@@ -22,5 +22,7 @@ VS/UhuruAV/ScanClient/Debug/*
 VS/UhuruAV/ScanClient/x64/*
 VS/UhuruAV/UhuruGuard Package/Win7Debug/*
 VS/UhuruAV/Win7Debug/*
+VS/json-c/json-c/json-c.v12.suo
 out/
 documentation/specs-ihm/tatou-ihm/~$$tatouIHM.~vsdx
+
