--- a/VS/UhuruAV/clamav/clamav.vcxproj
+++ b/VS/UhuruAV/clamav/clamav.vcxproj
@@ -55,7 +55,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>$(SolutionDir)..\clamav\clamav-0.98.7\libclamav;C:\Users\david\Desktop\clamav-0.98.7\libclamav;$(SolutionDir)..\clamav\clamdeps\win32\openssl\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\clamav\clamav-0.98.7\libclamav;$(SolutionDir)..\clamav\clamdeps\win32\openssl\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
