on-access scan working on linux

--- a/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
+++ b/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
@@ -16,7 +16,7 @@ enable-permission=1
 enable-removable-media=1
 
 # monitored mount points
-# file access inside these mount point will be monitored
+# file access inside these mount points will be monitored
 mount="/home"
 
 # monitored directories
