--- a/.gitignore
+++ b/.gitignore
@@ -23,6 +23,7 @@ VS/UhuruAV/ScanClient/x64/*
 VS/UhuruAV/UhuruGuard Package/Win7Debug/*
 VS/UhuruAV/Win7Debug/*
 VS/json-c/json-c/json-c.v12.suo
+VS/UhuruAV/UhuruAV_setup/Debug/*
 out/
 documentation/specs-ihm/tatou-ihm/~$$tatouIHM.~vsdx
 
