--- a/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
+++ b/libuhuru/src/linux/modules/on-access-linux/conf/on-access-linux.conf
@@ -24,7 +24,7 @@ directory="/var/tmp"
 directory="/tmp"
 
 # white list of directories: files in these directories will never be scanned for on-access scan
-white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"; "/var"
+white-list-dir="/bin"; "/boot"; "/dev"; "/etc"; "/lib"; "/lib32"; "/lib64"; "/libx32"; "/opt"; "/proc"; "/run"; "/sbin"; "/sys"; "/usr"
 
 # scan executables with clamav
 mime-type="application/x-executable"; clamav
