uhuru-av-Windows :: UhuruSvc: put files detected as malware in Quarantine folder + UhuruGuardSetup: disable WOW64 file system redirection during driver installation. + Setup: Add Quarantine folder in installer.

--- a/VS/UhuruAV/UhuruGuard Package/UhuruGuard Package.vcxproj
+++ b/VS/UhuruAV/UhuruGuard Package/UhuruGuard Package.vcxproj
@@ -388,11 +388,9 @@
       <PackageRelativeDirectory>
       </PackageRelativeDirectory>
     </FilesToPackage>
-    <FilesToPackage Include="D:\Novit\uhuru-av\VS\UhuruAV\Debug\modules\DB\clamav\bytecode.cvd" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\clamav</PackageRelativeDirectory>
-    </FilesToPackage>
-    <FilesToPackage Include="D:\Novit\uhuru-av\VS\UhuruAV\Debug\modules\DB\clamav\main.cvd" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\clamav</PackageRelativeDirectory>
+    <FilesToPackage Include="D:\Novit\uhuru-av\VS\UhuruAV\Debug\UhuruGuardSetup.exe" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
     </FilesToPackage>
     <FilesToPackage Include="D:\Novit\uhuru-av\VS\UhuruAV\Debug\UhuruSvc.exe" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
       <PackageRelativeDirectory>
