--- a/libuhuru/src/linux/daemon/Makefile.am
+++ b/libuhuru/src/linux/daemon/Makefile.am
@@ -3,8 +3,8 @@ AUTOMAKE_OPTIONS=subdir-objects
 sbin_PROGRAMS=uhuru-scand
 
 AM_CPPFLAGS= -DG_LOG_DOMAIN='"uhuru"' -DLOCALSTATEDIR=\"$(localstatedir)\"
-uhuru_scand_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/include/config -I$(top_srcdir)/src @GLIB2_CFLAGS@ @GIO2_CFLAGS@ @GTHREAD2_CFLAGS@
-uhuru_scand_LDADD=$(top_builddir)/src/libcore/libuhuru_core.la @GLIB2_LIBS@ @GIO2_LIBS@ @GTHREAD2_LIBS@ -lmagic
+uhuru_scand_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/include/config -I$(top_srcdir)/src -I$(top_srcdir)/src/libjson @GLIB2_CFLAGS@ @GIO2_CFLAGS@ @GTHREAD2_CFLAGS@ @LIBJSONC_CFLAGS@
+uhuru_scand_LDADD=$(top_builddir)/src/libcore/libuhuru_core.la $(top_builddir)/src/libjson/libuhuru_json.la @GLIB2_LIBS@ @GIO2_LIBS@ @GTHREAD2_LIBS@ @LIBJSONC_LIBS@ -lmagic
 
 uhuru_scand_SOURCES= \
 main.c \
