Uhuru-av-Windows :: Module Database update ::  - Download database description file from server  - Compare description file hash with cached hash.  - Parse description file (json parsing) and extract packages list  - Download files and verify checksums  - copy databases files to module db location  - save description file hash in cache.  - add service pause and continue control  - Unload and reload service. (to fix)

--- a/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj.filters
+++ b/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj.filters
@@ -48,6 +48,9 @@
     <ClCompile Include="quarantine.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="update.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="service.h">
@@ -75,6 +78,9 @@
       <Filter>Fichiers d%27en-tête\utils</Filter>
     </ClInclude>
     <ClInclude Include="quarantine.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="update.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
