--- a/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj.filters
+++ b/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj.filters
@@ -42,14 +42,14 @@
     <ClCompile Include="..\..\..\libuhuru\src\utils\getopt.c">
       <Filter>Fichiers sources\utils</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\libuhuru\src\utils\json.c">
-      <Filter>Fichiers sources\utils</Filter>
-    </ClCompile>
     <ClCompile Include="quarantine.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
     <ClCompile Include="update.c">
       <Filter>Fichiers sources</Filter>
+    </ClCompile>
+    <ClCompile Include="..\..\..\libuhuru\src\utils\uh_json.c">
+      <Filter>Fichiers sources\utils</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -74,14 +74,14 @@
     <ClInclude Include="..\..\..\libuhuru\src\utils\getopt.h">
       <Filter>Fichiers d%27en-tête\utils</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\libuhuru\src\utils\json.h">
-      <Filter>Fichiers d%27en-tête\utils</Filter>
-    </ClInclude>
     <ClInclude Include="quarantine.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
     <ClInclude Include="update.h">
       <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\..\libuhuru\src\utils\uh_json.h">
+      <Filter>Fichiers d%27en-tête\utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
