adding watchdog to real-time on linux

--- a/libuhuru/src/linux/modules/on-access-linux/src/Makefile.am
+++ b/libuhuru/src/linux/modules/on-access-linux/src/Makefile.am
@@ -9,7 +9,10 @@ onaccessmod.h \
 monitor.c \
 monitor.h \
 mount.c \
-mount.h 
+mount.h \
+queue.c \
+queue.h \
+stamp.h 
 
 on_access_linux_la_LDFLAGS= -module -avoid-version
 on_access_linux_la_LIBADD= @GLIB2_LIBS@ @GIO2_LIBS@
