Uhuru-av-Windows :: Add PDF module.

--- a/.gitignore
+++ b/.gitignore
@@ -26,6 +26,7 @@ VS/UhuruAV/Win7Debug/*
 VS/json-c/json-c/json-c.v12.suo
 VS/UhuruAV/UhuruAV_setup/Debug/*
 VS/UhuruAV/UhuruGuardSetup/Debug/*
+VS/UhuruAV/modulePDF/Debug/*
 out/
 documentation/specs-ihm/tatou-ihm/~$$tatouIHM.~vsdx
 
