reorg network code (unix + tcp sockets)

--- a/libuhuru/src/libjson/Makefile.am
+++ b/libuhuru/src/libjson/Makefile.am
@@ -1,3 +1,7 @@
+# TESTING:
+# nc -Ulk /tmp/.uhuru-ihm | ./libuhuru/tests/testjsonprint1 
+# echo -en '{ "av_request":"scan", "id":123, "params": {"path":"/home/francois/Bureau"}}\r\n\r\n' | nc -U /tmp/.uhuru-daemon  | ./libuhuru/tests/testjsonprint1 
+
 AUTOMAKE_OPTIONS=subdir-objects
 
 lib_LTLIBRARIES=libuhuru_json.la
@@ -10,9 +14,11 @@ print.h \
 scan.c \
 scan.h \
 state.c \
-state.h 
+state.h \
+../linux/net/unixsockclient.c \
+../linux/net/unixsockclient.h
 
-libuhuru_json_la_CFLAGS= -I$(top_srcdir)/include -I$(top_srcdir)/include/config -I$(top_srcdir)/src
+libuhuru_json_la_CFLAGS= -I$(top_srcdir)/include -I$(top_srcdir)/include/config -I$(top_srcdir)/src -I$(top_srcdir)/src/linux
 libuhuru_json_la_LIBADD= 
 
 libuhuru_json_la_CFLAGS+= @LIBJSONC_CFLAGS@
