--- a/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj
+++ b/VS/UhuruAV/UhuruSvc/UhuruSvc.vcxproj
@@ -56,7 +56,7 @@
       <Optimization>Disabled</Optimization>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;_LIB;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <SDLCheck>true</SDLCheck>
-      <AdditionalIncludeDirectories>D:\Novit\uhuru-av\libuhuru\src\windows\service\MessageText;D:\Novit\uhuru-av\libuhuru\src;D:\Novit\uhuru-av\VS\json-c\json-c;D:\Novit\uhuru-av\VS\UhuruAV\UhuruSvc;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(SolutionDir)..\..\libuhuru\src\windows\service\MessageText;$(SolutionDir)..\..\libuhuru\src;$(SolutionDir)..\..\VS\json-c\json-c;$(ProjectDir);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -90,6 +90,7 @@
     <ClCompile Include="named_pipe_client.c" />
     <ClCompile Include="named_pipe_server.c" />
     <ClCompile Include="quarantine.c" />
+    <ClCompile Include="register.c" />
     <ClCompile Include="scan_on_access.c" />
     <ClCompile Include="scan_on_demand.c" />
     <ClCompile Include="service.c" />
@@ -104,6 +105,7 @@
     <ClInclude Include="named_pipe_client.h" />
     <ClInclude Include="named_pipe_server.h" />
     <ClInclude Include="quarantine.h" />
+    <ClInclude Include="register.h" />
     <ClInclude Include="scan_on_access.h" />
     <ClInclude Include="scan_on_demand.h" />
     <ClInclude Include="service.h" />
