--- a/package.json
+++ b/package.json
@@ -38,8 +38,8 @@
   "main": "app/index.html",
   "window": {
     "title": "Armadito",
-    "toolbar": false,
-    "frame": false,
+    "toolbar": true,
+    "frame": true,
     "width": 800,
     "height": 500,
     "position": "center",
